# Trading-System

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
Docs/: Macro_Series_Reference 1.csv  alpaca_tradable_symbols_and_timeframes.md  event_driven_trading_architecture.md  iex_symbol_frequencies.txt  module_01_data_ingestion.md  module_02_event_detection.md  module_03_feature_engineering.md  module_04_ml_prediction.md  module_05_signal_generation.md  module_06_execution_engine.md  module_07_backtesting_simulation.md  module_08_infrastructure_monitoring.md  project_development_checklist.md
config/: config.yaml  env_template.txt
scripts/: check_iex_symbols.py  docker-build.sh  docker-run.bat  fetch_alpaca_symbols.py  setup_api_keys.py  test_single_iex_symbol.py
src/: __init__.py  quick_test.py  test_api_connectivity.py  test_complete_backtest.py  test_entity_linker.py  test_entity_linker_simple.py  test_event_pipeline.py  test_feature_engineering_main.py  test_feature_engineering_simple.py  test_feature_smoke.py  test_impact_scorer.py  test_signal_generation.py  test_signal_schema.py  test_system_health.py  test_working_symbols.py
src/backtesting/: __init__.py  backtest_engine.py  historical_simulator.py  metrics_logger.py  portfolio_simulator.py
src/data_ingestion/: __init__.py  events.py  main.py  market_data.py  news.py  sentiment.py  test_ingestion.py
src/event_detection/: __init__.py  entity_linker.py  (+4 more)
tests/: README.md  __init__.py  run_tests.py  test_backtesting.py  test_data_ingestion.py  test_entity_linker_simple.py  test_events.py  test_execution_core.py  test_execution_engine.py  test_execution_engine_simple.py  test_feature_engineering.py  test_feature_engineering_simple.py  test_feature_smoke.py  test_ml_modeling.py
(+27 files in other folders)
