[tool.poetry]
name = "event-driven-trading"
version = "0.1.0"
description = "Event-driven ML trading system with Alpaca integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alpaca-py = "^0.8.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
loguru = "^0.7.0"
apscheduler = "^3.10.1"
newsapi-python = "^0.2.7"
tweepy = "^4.14.0"
transformers = "^4.30.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 